# ChangeLog for app-text/html-xml-utils
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/html-xml-utils/ChangeLog,v 1.33 2008/01/11 21:14:34 grobian Exp $

  11 Jan 2008; Fabian Groffen <grobian@gentoo.org>
  html-xml-utils-3.7.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  13 Nov 2007; Raúl Porcel <armin76@gentoo.org> html-xml-utils-3.7.ebuild:
  Add ~alpha

  12 Mar 2007; Leonardo Boshell <leonardop@gentoo.org> metadata.xml,
  -html-xml-utils-2.8-r1.ebuild, -html-xml-utils-3.6.ebuild:
  Replacing text-markup herd with the new sgml herd. Pruning old ebuilds.

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  16 Mar 2006; Martin Ehmsen <ehmsen@gentoo.org>
  html-xml-utils-2.8-r1.ebuild, html-xml-utils-2.8-r2.ebuild,
  html-xml-utils-3.4.ebuild, html-xml-utils-3.6.ebuild,
  html-xml-utils-3.7.ebuild:
  Don't install COPYING and INSTALL, found by QA script.

  08 Jan 2006; Joseph Jezak <josejx@gentoo.org> html-xml-utils-3.7.ebuild:
  Marked ~ppc for bug #114326.

  22 Dec 2005; Fabian Groffen <grobian@gentoo.org>
  html-xml-utils-3.7.ebuild:
  Marked ~ppc-macos (bug #114326)

  22 Dec 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  html-xml-utils-3.7.ebuild:
  Keyworded ~sparc wrt #114326

*html-xml-utils-3.7 (03 Dec 2005)

  03 Dec 2005; <pclouds@gentoo.org> +html-xml-utils-3.7.ebuild:
  Version bump

  15 Oct 2005; Fabian Groffen <grobian@gentoo.org>
  html-xml-utils-3.6.ebuild:
  Marked ~ppc-macos (bug #108634)

  09 Sep 2005; Aron Griffis <agriffis@gentoo.org>
  html-xml-utils-2.8-r2.ebuild:
  Mark 2.8-r2 stable on alpha

  30 Apr 2005; David Holm <dholm@gentoo.org> html-xml-utils-3.6.ebuild:
  Readded to ~ppc

  08 Mar 2005; Jason Wever <weeve@gentoo.org> html-xml-utils-3.6.ebuild:
  Added ~sparc keyword as it was mistakenly dropped in the version bump.

*html-xml-utils-3.6 (28 Feb 2005)
