@@ -1,4 +1,6 @@
 DIST html-xml-utils-3.7.tar.gz 213404 RMD160 ae907ecfc87ba5e64f86000d251ef42ba0662cfa SHA1 8a6365a9413328069c89e5d81de0ff9de2f09541 SHA256 796136e8e288164ea6f6b6d657080bbbb2942b20ba38e2f70a334d750ccc14fc
+DIST html-xml-utils-4.7.tar.gz 225567 RMD160 6d349c8ee241c2611f3d2e0065f75b9b5bc48ee1 SHA1 297bb179168e5af04375c1c62945074d8765aba2 SHA256 08e8633fd359442c26609a26b86df17eb8fc15025e2355d5b334a327e8ce38f3
 EBUILD html-xml-utils-3.7.ebuild 1193 RMD160 336b4201225dbb7785eb38765e9ae95339e594dd SHA1 f472489a3b223f136264aa913400d158b93a22cb SHA256 b945079878c11026c4db56928321bc7b6ebf9fd8c6edbb4107b5d9a9d85d8d87
-MISC ChangeLog 4986 RMD160 f363614f2db8516df03c862f5122d50990fccb0a SHA1 1bdbaddc48c54a57c30dde390f902876febd490d SHA256 010c4b0197a29263480152286d78c445a9c505aeaeb443684e09cebc6a38e382
+EBUILD html-xml-utils-4.7.ebuild 1187 RMD160 946a5e89e98eeee0c1ed3eb1b50b1a6aeeb1db49 SHA1 a9858d69361434fb84d0b35b3761369fd5fa0386 SHA256 4dbc47bb38bd9d78d1d6290d90cff211034c184ffc8e86f3d3c1380e918c6578
+MISC ChangeLog 5171 RMD160 1d198d475738b4472bc51173411eabbf4a00e308 SHA1 ffe49767eaba154031dc0bbcb44a1a69bf0d87ec SHA256 5a7115fdeae367e7c02085f5933f5cc9b3deb834db15a0cbab1614b559f9e974
 MISC metadata.xml 159 RMD160 a94e7b2c191d1593b8bc416d266571e001c2f673 SHA1 3c1d0831d8acacef390234d20d7711cabded861a SHA256 52cf1b9dda72e2d61fef95515c8a124ac9f1196e5509e5636e269f396fcba8a3
